static html, bower

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "bower install",
     "dev": "static public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.7.7",
     "node-static": "^0.7.7"
   }
 }
