ui router, layout

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "bootswatch": "^3.3.6",
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "angular-ui-router": "~0.2.18"
   }
 }
