--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "bower install",
-    "dev": "static public",
+    "dev": "static public -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
