--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootswatch": "^3.3.6",
     "angular": "^1.5.0",
-    "angular-ui-router": "~0.2.18"
+    "angular-ui-router": "~0.2.18",
+    "lodash": "~4.6.0"
   }
 }
