query on backend

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "bower install",
-    "dev": "static public -c-1",
+    "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,5 +14,9 @@
   "devDependencies": {
     "bower": "^1.7.7",
     "node-static": "^0.7.7"
+  },
+  "dependencies": {
+    "express": "^4.13.4",
+    "lodash": "^4.6.1"
   }
 }
