--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-static": "^0.7.7"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "lodash": "^4.6.1"
   }
