--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "nedb": "^1.8.0"
   }
 }
