--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "bootswatch": "^3.3.6",
     "angular": "^1.5.0",
     "angular-ui-router": "~0.2.18",
-    "lodash": "~4.6.0"
+    "lodash": "~4.6.0",
+    "angular-bootstrap": "~1.2.4"
   }
 }
