--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "bower install",
-    "dev": "node server.js",
+    "dev": "node-dev server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "bower": "^1.7.7",
+    "node-dev": "^3.1.0",
     "node-static": "^0.7.7"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-session": "^1.2.0",
     "express": "^4.13.4",
     "lodash": "^4.6.1",
     "nedb": "^1.8.0"
